<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/unit_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/cards_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <!-- CardView for Length Conversion  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#EDEDED"
                app:cardCornerRadius="10dp">

                <!-- Content inside CardView -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/length" />

                    <!-- Title -->
                    <TextView
                        android:id="@+id/length"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/length"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!-- Description -->

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- CardView for Length Conversion  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#EDEDED"
                app:cardCornerRadius="10dp">

                <!-- Content inside CardView -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/area" />

                    <!-- Title -->
                    <TextView
                        android:id="@+id/area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/area"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!-- Description -->

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <!-- CardView for Length Conversion  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#EDEDED"
                app:cardCornerRadius="10dp">

                <!-- Content inside CardView -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/volume" />

                    <!-- Title -->
                    <TextView
                        android:id="@+id/volume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/volume"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!-- Description -->

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- CardView for Length Conversion  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#EDEDED"
                app:cardCornerRadius="10dp">

                <!-- Content inside CardView -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/speed" />

                    <!-- Title -->
                    <TextView
                        android:id="@+id/speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!-- Description -->

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <!-- CardView for Length Conversion  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#EDEDED"
                app:cardCornerRadius="10dp">

                <!-- Content inside CardView -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/weigth" />

                    <!-- Title -->
                    <TextView
                        android:id="@+id/weigth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weigth"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!-- Description -->

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- CardView for Length Conversion  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#EDEDED"

                app:cardCornerRadius="10dp">

                <!-- Content inside CardView -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/temprature" />

                    <!-- Title -->
                    <TextView
                        android:id="@+id/temprature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temprature"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!-- Description -->

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <!-- CardView for Length Conversion  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#EDEDED"
                app:cardCornerRadius="10dp">

                <!-- Content inside CardView -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/power" />

                    <!-- Title -->
                    <TextView
                        android:id="@+id/Power"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/power"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!-- Description -->

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- CardView for Length Conversion  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#EDEDED"
                app:cardCornerRadius="10dp">

                <!-- Content inside CardView -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/pressure" />

                    <!-- Title -->
                    <TextView
                        android:id="@+id/Pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!-- Description -->

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
